# django_api

./: pyproject.toml
src/my_site/: settings.py
