[tool.poetry]
name = "django_api"
version = "0.1.0"
description = ""
authors = ["Himanshu Sharma <88159798+sh-himanshu@users.noreply.github.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
